--- a/html/Kiosk_ending.html
+++ b/html/Kiosk_ending.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link href="../css/Kiosk_ending.css" rel="stylesheet" type="text/css" />
     <script src="../js/Kiosk_ending.js"></script>
+    <script src="../js/chmo.js"></script>
 </head>
 
 <body>
@@ -19,6 +20,7 @@
 
     <script>
         send_home();
+        chmod();
         // 5초 지나고 메인 페이지로 이동시키기
 
     </script>
