--- a/html/Kiosk_howto.html
+++ b/html/Kiosk_howto.html
@@ -15,6 +15,18 @@
 </head>
 
 <body>
+    <div id="QR_dec">
+        <div>
+            쿠폰 받으신 분은 QR
+        </div>
+    </div>
+    <div id="indicate"> </div>
+    <div id="indicate1"> </div>
+    <div id="pin_dec">
+        <div>
+            5자리 숫자 입력하실 분
+        </div>
+    </div>
     <div id="time">
 
     </div>
